testdata/golden/sema/valid/concurrency/mutex_basic.sg
// Basic Mutex usage patterns

pub fn test_mutex_lock_unlock() -> nothing {
    let mut m: Mutex = Mutex.new();
    m.lock();
    // critical section
    m.unlock();
}

pub fn test_mutex_try_lock() -> bool {
    let mut m: Mutex = Mutex.new();
    return m.try_lock();
}
